--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 *.iws
 .idea/
 
+# firebase related
+android/app/google-services.json
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
