--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_fonts: ^2.0.0
   email_validator: ^2.0.1
   flutter_easyloading: ^3.0.0
+  carousel_slider: ^4.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
