--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_easyloading: ^3.0.0
   carousel_slider: ^4.0.0-nullsafety.0
   firebase_remote_config: ^0.10.0-dev.0
+  flutter_dotenv: ^4.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
@@ -31,4 +32,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - .env
     - google_fonts/
