--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   carousel_slider: ^4.0.0-nullsafety.0
   firebase_remote_config: ^0.10.0-dev.0
   flutter_dotenv: ^4.0.0-nullsafety.0
+  http: ^0.13.1
 
 dev_dependencies:
   flutter_test:
