--- a/.env.help
+++ b/.env.help
@@ -1,2 +1,2 @@
-Rename this file to .env and remove this line
+# Rename this file to .env and remove this line
 PIXABAY_API_KEY=Put your pixabay api key here
