--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_remote_config: ^0.10.0-dev.0
   flutter_dotenv: ^4.0.0-nullsafety.0
   http: ^0.13.1
+  animations: ^2.0.0
 
 dev_dependencies:
   flutter_test:
