--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_easyloading: ^3.0.0
   carousel_slider: ^4.0.0-nullsafety.0
   flutter_dotenv: ^4.0.0-nullsafety.0
+  auto_size_text: ^3.0.0-nullsafety.0
   http: ^0.13.1
   animations: ^2.0.0
 
